tests/ui/cfg/invalid-cli-check-cfg-pred.rs
//@ compile-flags: --check-cfg 'foo=1x'

fn main() {}

//~? ERROR invalid `--check-cfg` argument
